# query-lite-sql

./: README.md  package.yaml  query-lite-sql.cabal  sample.json
.history/: README_20250509191341.md  package_20250509164353.yaml  query-lite-sql_20250509191029.cabal  sample_20250509191322.json  sample_20250509191323.json
.history/app/: Main_20250509164404.hs  Main_20250509191233.hs
.history/frontend/: index_20250509191304.html  index_20250509191349.html
.history/frontend-svelte/src/: App_20250509191505.svelte
.history/src/QueryLiteSQL/Database/: Schema_20250509164438.hs  Schema_20250509191349.hs
.history/src/QueryLiteSQL/Parser/: SQL_20250509191107.hs
.history/src/QueryLiteSQL/Types/: Env_20250509191206.hs
.history/static/: index_20250509164456.html  index_20250509164457.html
backend/src/QueryLiteSQL/Parser/: Executor.hs
backend/src/QueryLiteSQL/Web/: Routes.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/QueryLiteSQL/Database/: Schema.hs
src/QueryLiteSQL/Parser/: Executor.hs  SQL.hs
src/QueryLiteSQL/Types/: Env.hs
src/QueryLiteSQL/Web/: Routes.hs
static/: app.css  app.js  index.html
