cabal-version:      2.4
name:               query-lite-sql
version:            0.1.0.0
synopsis:           SQL query interface for JSON data
description:        A simple SQL query interface for JSON data with a web interface
license:           MIT
author:            Your Name
maintainer:        your.email@example.com
category:          Web
build-type:        Simple

executable query-lite-sql-exe
  main-is:          Main.hs
  other-modules:    QueryLiteSQL.Parser.SQL
                  , QueryLiteSQL.Parser.Executor
                  , QueryLiteSQL.Types.Env
                  , QueryLiteSQL.Web.Routes
                  , QueryLiteSQL.Database.Schema
  build-depends:    base >= 4.7 && < 5
                  , aeson
                  , attoparsec
                  , scotty
                  , wai
                  , wai-cors
                  , text
                  , bytestring
                  , sqlite-simple
                  , mtl
                  , directory
                  , filepath
                  , time
                  , uuid
                  , uuid-types
                  , vector
                  , unordered-containers
  hs-source-dirs:   app, src
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N 