cabal-version:      3.0
name:               query-lite-sql
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Author
maintainer:         author@example.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  QueryLiteSQL.Types.Env
                     ,QueryLiteSQL.Parser.SQL
                     ,QueryLiteSQL.Parser.Executor
                     ,QueryLiteSQL.Database.Schema
                     ,QueryLiteSQL.Web.Routes
    build-depends:    base
                     ,aeson
                     ,attoparsec
                     ,text
                     ,containers
                     ,scotty
                     ,wai
                     ,wai-cors
                     ,wai-middleware-static
                     ,http-types
                     ,mtl
                     ,transformers
                     ,bytestring
                     ,sqlite-simple
                     ,time
                     ,vector
                     ,scientific
                     ,unordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable query-lite-sql-exe
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                     ,query-lite-sql
                     ,aeson
                     ,scotty
                     ,text
                     ,wai-cors
                     ,wai-middleware-static
                     ,mtl
                     ,transformers
    hs-source-dirs:   app
    default-language: Haskell2010 